--- a/Natasha/intro-to-python-exercises.ipynb
+++ b/Natasha/intro-to-python-exercises.ipynb
@@ -15,8 +15,103 @@
     "\n",
     "Please save the file as `intro-YOURNAME.ipynb` in the directory `ShenzhenWinterCamp/Natasha/Homework1`\n",
     "\n",
-    "When you are finished, the Jupyter notebook file should be submitted to the GitHub repository with a pull request."
+    "When you are finished, the Jupyter notebook file should be submitted to the GitHub repository with a pull request.\n",
+    "\n",
+    "My email is [tashawatkins@gmail.com](mailto:tashawatkins@gmail.com) if you require any assistance or further clarification."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reading: Python essentials\n",
+    "\n",
+    "It's important that you have a solid understanding of data types and functions for later lectures.\n",
+    "\n",
+    "Please read QuantEcon's Python Essentials: https://lectures.quantecon.org/py/python_essentials.html\n",
+    "\n",
+    "Complete exercise 1 through 5 below - you may check your answers but please attempt the question before checking!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Exercise 1 **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Exercise 2 **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Exercise 3 **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Exercise 4 **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Exercise 5 **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -134,7 +229,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -145,97 +242,6 @@
     "** Exercise: ** Create an interactive plot using your `generate_AR1` function\n",
     "* `mu` should take values between 0 and 10\n",
     "* `rho` should take values between 0 and 0.99, with steps of 0.01"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reading: Python essentials\n",
-    "\n",
-    "It's important that you have a solid understanding of data types and functions for later lectures.\n",
-    "\n",
-    "Please read QuantEcon's Python Essentials: https://lectures.quantecon.org/py/python_essentials.html\n",
-    "\n",
-    "Complete exercise 1 through 5 below - you may check your answers but please attempt the question before checking!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** Exercise 1 **"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** Exercise 2 **"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** Exercise 3 **"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** Exercise 4 **"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** Exercise 5 **"
    ]
   },
   {
