--- a/Xianfeng Li/SciPy.ipynb
+++ b/Xianfeng Li/SciPy.ipynb
@@ -1357,6 +1357,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAh0AAAEyCAYAAABecmKZAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3X2UXXV97/H3L5DwJEkk4TEQGa5BpFypOM6l0CVeQYoK\ngkVti6uMVs0TkoCJJBATQmgCkQgKoXlQaMer0kKRhlVT0dCLraUwJAhIFEEdIkQkRskMyE0g5Hf/\n2BOZmbPPzJmcffZ5er/Wypo5v9/J3t/txpXP2vv3EGKMSJIkVdqIahcgSZKag6FDkiTlwtAhSZJy\nYeiQJEm5MHRIkqRcGDokSVIuyg4dIYR9QwidIYRHQwgbQwhXZVGYJElqLKHcdTpCCAE4IMb4Ughh\nJPADYGaM8YEsCpQkSY1h73IPEJPU8lLvx5G9f1xxTJIk9VN26AAIIewFbADeDNwcY3xwsO+PHz8+\nHn300VmcWpIkVdmGDRu2xhgPHup7mYSOGONrwB+HEMYCd4UQTogxPt73OyGEycBkgIkTJ7J+/fos\nTi1JkqoshLCplO9lOnslxrgN+L/AWSl9q2OMrTHG1oMPHjIMSZKkBpPF7JWDe59wEELYD3gv8ES5\nx5UkSY0li9crhwMdveM6RgC3xxj/NYPjSpKkBpLF7JXHgLdnUIskSWpgrkgqSZJyYeiQJEm5MHRI\nkqRcGDokSVIuDB2SJCkXhg5JkhrZrl3wla/AnXfCjh1VLSWTZdAlSVKNiRHuuAPuvff1tne8A6q4\n95mhQ5KkRrNuXRI4gC1b4Mkn4fH4R/xo76Npb4e2tuqUZeiQJKlRbNgAq1f/4eOWLfAfj4zm7pMW\nss9BB9CzFRYsgEWLqhM8DB2SJNW7p56CZcsKmpcdtIRNbeMYOzb5vPtnR4ehQ5IkDccvfwmLFxe2\nf/7zcNRRPP5+mDChf9fo0dDVlU95Axk6JEmqN5s2seWSJTz5JPS8CKMPhGOPhUMWz4Tjj//D11pa\nYOvW159wAPT0JO3V4JRZSZLqxQsvwJQpbLlkCevXw/btcMAB8J3DPs6F/28VnS8d3+/r7e3Q3Q3b\ntiUzZ7dtSz63t1enfJ90SJJU63bsgBkz/vDxySdh1CjYa79RfPPUmwAYs61wrEZbWzJotKMjeaXS\n0gKzZjl7RZIkDRQjTJ1a0NzzItx15kpG7BX+0FZsrEZbW/VCxkCGDkmSatG0ack7kYFuuolvXzqK\nnhoaq1EqQ4ckSbVkypT09i98AcaMAZIxGQsWJM2jRyeBo7s7eXVSywwdkiTVgoUL4bnnCtt7p7/2\nVWtjNUpl6JAkqZpuuw3uu6+wfdo0+OM/LvrXammsRqkMHZIkVcP99yePKgY68USYPj3/enJg6JAk\nKU9dXXDttYXtI0fSeeHy5JXJ+5NXJtXcnK0SDB2SJOVh2zaYMye9b9UqOjuTwaFjxiRLl2+t8uZs\nlWDokCSpknbuhIsuSu9buRJCstZGR0cSOGplc7ZKMHRIklQJRRb2AmD5chg5sl9TV1dtbc5WCYYO\nSZKyVmytjaVL+6/o1Uetbc5WCYYOSZKycvHF8Morhe1z5sAxxwz6V+t1wa/hMHRIklSuv/s7ePTR\nwvb2djjllJIOUa8Lfg2HoUOSpD11zz3wrW8Vtp92GlxwwbAPV48Lfg1H2aEjhHAU8DXgUCACq2OM\nXy73uJIk1ayNG+HGGwvbDz88Wc5cqbJ40rETmBVjfDiEcCCwIYTwvRjjjzM4tiRJAHR29n/1UJWF\ns7Zsgfnz0/tWrcq3ljpUduiIMT4HPNf7+4shhJ8AEwBDhyQpE1VfOGv7dpg5M73PsFGyTMd0hBCO\nBt4OPJjSNxmYDDBx4sQsTytJanBVWzhrsLU2VqyAESMqePLGk1noCCG8AbgTuCTG2DOwP8a4GlgN\n0NraGrM6rySp8VVl4axia23ccAPsv38FT9y4MgkdIYSRJIHjGzHGlGG8kiTtuVwXzioWNhYuTAaK\nao9lMXslALcAP4kxXl9+SZIk9ZfLwlmLF8Mvf1nYPn16st28ypbFk45Tgb8GfhRCeKS37YoY49oM\nji1JUmUXzrrjDli3rrD9nHPg7LMzOIF2y2L2yg+AkEEtkiQVlfnCWZ2dcMsthe3HH198porK4oqk\nkqTmsmkTLFmS3uf014oydEiSmkNPD3zuc+l9ho1cGDokSY1t50646KL0vpUrIThCIC+GDklS4yo2\n/XX5chg5Mt9aZOiQJDWgYmHj2mvhjW/Mtxb9gaFDktQ4PvtZ+P3vC9tnz4ZJk/KvR/0YOiRJ9e8r\nX4H16wvbP/YxeNe78q9HqQwdkqT6de+9cPvthe2nnJIsY6qaYuiQJNWfJ55INl4baNy44mtwqOoM\nHZKk+rF1K8ybl97nWhs1z9AhSap9O3bAjBnpfYaNumHokNQwOjv7bwjW3p7xXh3KX4wwdWp634oV\nMGJEvvWoLIYOSQ2hszPZ+nzMGJgwIXkKv2BBsjOpwaNOFVtr4/rr4YAD8q1FmTB0SGoIHR1J4Bg7\nNvm8+2dHh6Gj7hQLG/Pnw5FH5luLMmXokNQQurqSJxx9jR6dtKtOfOEL8POfF7ZPmQInnZR/Pcqc\noUNSQ2hpSV6p7H7CAcmmoi0t1atJJbrrLvjOdwrb3/c+OO+8/OtRxRg6JDWE9vZkDAckTzh6eqC7\nG2bNqm5dzWKPBvFu2ACrVxe2T5qULFuuhhNijLmftLW1Na5PW65Wksrg7JXq6DuIt2/gKzqI99ln\n4eqr0w/m9Ne6FELYEGNsHep7PumQ1DDa2gwZ1VDyIN6XXir+6Mmw0RQMHZKksgw5iPe112D69PS/\nvHIlhFDR+lQ7DB2SpLIMOoi32PTXG2+EffbJpT7VDkOHJKksaYN42++fQmsrcMiALy9eDOPH512i\naoShQ5JUlra2ZNBoRwec9p25HLHvCxzbCof0DRyf/Sy85S1Vq1G1wdAhSSpb29qFtO18Ds4Y0PEX\nfwHveU9ValLtMXRIkvbcHXfAunWF7e98J3zqU/nXo5pm6JAkDd8Pf5jMPEnj9FcVYeiQJJVu8+Zk\nAEcaw4aGkEnoCCHcCpwNbIkxnpDFMSVJNeTll+HSS9P7DBsqUVZPOv4BWA58LaPjSZJqQYwwdWp6\n3803w94+MFfpMvmvJcb4HyGEo7M4liSpRgxY2GvLFnjySbj5sKs56LhDaH/YZec1PEZUSVJ/KauI\nbtkCi56fwm9OOInRo5MVSBcsGGRTNylFbqEjhDAZmAwwceLEvE4rSSpVsSXL3/1urvrBX7F1VAmb\nukmDyC10xBhXA6sh2do+r/NKkoZw1VXwq18Vto8eDdddB0DX/xliUzepBL5ekaRmtWYNrF2b3jdg\nRsqgm7pJJRqRxUFCCLcB/w28JYTwbAjhk1kcV5JUARs3Jq9S0gLHqlWpU2Db26G7G7Ztg127kp/d\n3Um7VKqsZq/8VRbHkSRV0AsvwNy56X1DrLXRd1O3rq7kCcesWY7n0PD4ekWSGt1rr8H06el9K1bA\niNIeere1GTJUHkOHJDWyYjNSli2DAw/MtxY1PUOHJDWiYmHjc5+DN78531qkXoYOSWokxcLG+efD\nmWfmW4s0gKFDkhrB1KnJPikDTZoEs2fnX4+UwtAhSfXsllugszO9z91fVWMMHZJUj/77v+Ef/iG9\nz7ChGmXokKR6snlzsmBGGsOGapyhQ5LqwfbtMHNmet/KlRBCvvVIe8DQIUm1LMZkkGiaG2+EffbJ\ntx6pDIYOSapVxaa/LlwIhx+eaylSFgwdklRrioWNT37SdchV1wwdklQrioWNU0+FCy/MtxapAgwd\nklRt11wDTz9d2L7PPsm4DalBGDokqVrWroU1a9L7nP6qBmTokKQSdXZCRwd0dUFLC7S37+EQiyef\nhC9+Mb3PsKEGZuiQpBJ0dsKCBTBmDEyYAFu3Jp8XLRpG8OjuhssuS+8zbKgJGDokqQQdHUngGDs2\n+bz7Z0dHCaFj1y6YNi29b8UKGDEiszqlWmbokKQSdHUlTzj6Gj06aR9UsRkpS5e+nlykJmHokKQS\ntLQkr1T65oSenqQ9VbGwcemlcNxxmdcn1QNDhySVoL09GcMByROOnp5kiMasWQO+WCxsvO99cN55\nFa1RqnWGDkkqQVtbMmi07+yVWbP6jOcoFjbGjYMlS3KrU6plhg5JKlFbW8qg0dWrYcOG9L/gjBSp\nH0OHJO2J++9PHnukMWxIqQwdkjQczz4LV1+d3mfYkAZl6JCkUmzfDjNnpvetXAkh5FuPVIcMHZI0\nmBhh6tT0vi99CfbbL996pDpm6JCkYorNSJk7d5AFOiQVk0noCCGcBXwZ2Av4aozx2iyOK0lVUSxs\nnH8+nHlmvrVIDaTs0BFC2Au4GXgv8CzwUAjh7hjjj8s9tiTlqljYOPpouPzyXEuRGlEWTzragJ/F\nGH8BEEL4R+BcwNAhqT7MmQPbtqX3OSNFykwWoWMC8Eyfz88C/2vgl0IIk4HJABMnTszgtJJUpjvv\nhO9+N70vg7DR2dl/BdP29hJ2pJUaWG4DSWOMq4HVAK2trTGv80pSgR//GL785fS+jJ5sdHYme7WM\nGZPsTrt1a/J50SKDh5pXFqFjM3BUn89H9rZJUm3p7obLLkvvy/g1SkdHEjh270q7+2dHh6FDzSuL\n0PEQMCmE0EISNv4SuCCD40pSNnbtgmnT0vtuvhn2zv6hb1dX8oSjr9Gjk3apWZX9/7QY484QwmeA\ne0imzN4aY9xYdmWSlIViM1KuvhoOOaRip21pSV6p7H7CAdDT4/Ieam6ZxPsY41pgbRbHkqRMFAsb\nn/40tLZW/PTt7ckYDkiecPT0JG93Zs2q+KmlmuWKpJIaS7GwcfLJ8IlP5FZGW1syaLTv7JVZsxzP\noeZm6JDUGIqFDajaWhttbYYMqS9Dh6T6tmIFPPJIep8Le0k1xdAhqT49+CDcemt6n2FDqkmGDkn1\n5Te/gc9/Pr3PsCHVNEOHpPrw6qvwmc+k961cCSHkW4+kYTN0SKp9xQaJ3nAD7L9/vrVI2mOGDkm1\nq1jYuOIKeNOb8q1FUtkMHZJqT7GwccEFcNpp+dYiKTOGDkmDynV79mJh421vg4suqtBJJeXF0CGp\nqNy2Z7/5ZnjssfS+Ks1IyTVsSU3C0CGpqIpvz37ffXDbbel9VZz+mlvYkpqMoUNSURXbnn3TJliy\nJL2vBtbaqHjYkpqUoUNSUZlvz/7yy3Dppel9NRA2dqtY2JKanKFDUlGZbc8eI0ydmt63fDmMHFlW\nnVnLPGxJAmBEtQuQVLt2b88+fjxs3pz8HPa4hilT0gPH4sXJ040aCxyQhK3ubti2DXbtSn52dyft\nkvZciDHmftLW1ta4fv363M8r6XUVn51RbPrr9Olw4okZnqgynL0ilS6EsCHG2Drk9wwdUvPpOzuj\n72uTTGZnFAsbp58OH/1omQeXVItKDR2O6ZCaUEVmZyxYAM8/X9g+diwsXbqHB5XUSAwdUhPKdHbG\nt74F99yT3lehGSlZvPrw9YmUPweSSk2opSV5pdLXsGdnPP548iolLXCsWlXRwLFgQTK7pO/CXZ2d\n+R5D0vAZOqQmVNbsjN/9LgkbN91U2FfBsLFb31dDI0YkP8eMSdrzPIak4fP1itSEdk+F7ft6Ydas\nIV4v7NxZfNO1lSshhNSurF9jZPFqyMW/pOowdEhNqq1tGP/4F5uR8sUvwhveUPSvVWIPkywW7nLx\nL6k6fL0iqbgpU9IDx5w5yWuUQQIHVOY1RhYLd7n4l1Qdhg5JhYqFjY98JAkbxxxT0mG6upLXFn2V\n+xoji1VSM1lpVdKw+XpF0uuKvUY57rjiG7UNolKvMYb1aqiCx5A0PGU96QghfCSEsDGEsCuEMORK\nZJJq1Fe+UjxwrFq1R4EDfI0hqb9yn3Q8Dvw5UDt7Uksq3X/9F3zta+l9GUx93aNZMpIaVlmhI8b4\nE4BQZKqcpBr1/POv71k/UMbrbPgaQ9JujumQmsmOHTBjRnpfhRf1kqQhQ0cIYR1wWErXvBjjmlJP\nFEKYDEwGmDhxYskFSspAjDB1anrf8uUwcmS+9UhqSkOGjhjjGVmcKMa4GlgNydb2WRxTUgmKDRBd\nsgTGjcu3FklNzdcrUqMqFjYuuQTe+tZ8a5EkygwdIYQPATcBBwPfDiE8EmP8s0wqk7RnZsxIxm4M\ndN558L735V+PJPUqd/bKXcBdGdUiaQiDbp52663w4IOFf+nYY5N5qpJUZb5ekepEsc3Trv/Qf3L8\nw19P/0vOSJFUQwwdUp3ou3kawP/Y62ne89Q1/O5G4E8HfNmwIakGGTqkOtHVlTzh2OeVF/nwA7MB\niKOg58U+XzJsSKphhg6pThxz9C7Ou2cao0a93vbqKzD6QGDFimTveEmqYYYOqR5MmcKCLbD+leTj\nyFFJ4Lip5XrmLTmgzK0bJSkfhg6plvVZa+OQQ6C1FZ58ElYeeiVj3noE89rd10RS/TB0SLXoqqvg\nV78qaD7k6os55IQTCsaNSlI9MHRIteS22+C++wrb//zP4c9cd09SfTN0SLXg/vuTObEDve1tcNFF\n+dcjSRVg6JCqqasLrr22sH3kyGT3V0lqIIYOqRq6u+Gyy9L7XGtDUoMydEh52rmz+OuSlSshhHzr\nkaQcGTqkPMQIU6em9y1fnrxOkaQGZ+iQKq3PWhv9LF36+kYqktQEDB1SpcyYATt2FLbPmQPHHJN/\nPZJUZYYOKWsrVsAjjxS2X3ghnHpq/vVIUo0wdEhZ+e534c47C9vf9S742Mfyr0eSaoyhQyrXxo1w\n442F7YceCosW5V+PJNUoQ4e0p7Zsgfnz0/tca0OSChg6pOHavh1mzkzvM2xIUlGGDqlUg621sWIF\njBiRbz2SVGcMHVIpiq21ccMNsP/++dYiSXXK0CENpljYWLgQDj8811Ikqd4ZOqQ0S5bApk2F7dOn\nw4kn5l+PJDUAQ4fU1x13wLp1he3nnANnn51/PZLUQAwdEkBnJ9xyS2H7W98Kl1ySfz2S1IAMHWpu\nmzYlr1LSOP1VkjJl6FBzevFFmD07vc+wIUkVUVboCCFcB5wDvAL8HPhEjHFbFoVJFbFzJ1x0UXrf\nypUQQr71SFITKfdJx/eAy2OMO0MIS4HLgTnllyVVQLHprzfdBKNG5VuLJDWhskJHjPG7fT4+AHy4\nvHKkCigWNq69Ft74xnxrkaQmluWYjr8B/qlYZwhhMjAZYOLEiRmeVipi9uxk7EZa+6RJ+dcjSU1u\nyNARQlgHHJbSNS/GuKb3O/OAncA3ih0nxrgaWA3Q2toa96haqRRf/So89FBh+wUXwGmn5V+PJAko\nIXTEGM8YrD+E8HHgbOD0GKNhQtVz771w++2F7aecAu3t+dcjSeqn3NkrZwGXAafFGF/OpiRpmJ54\nItl4baCDDoJrrsm/HklSqnLHdCwH9gG+F5Kphg/EGIvs/S1lbOtWmDcvvc+1NiSp5pQ7e+XNWRUi\nlezVV+Ezn0nvM2xIUs1yRVLVjxhhapEHaStWwIgR+dYjSRoWQ4fqQ7Hpr1/+Muy7b/71SJKGzdCh\n2nbzzfDYY4XtS5bAuHH51yNJ2mOGDtWmu++Gb3+7sH3OHDjmmPzrkSSVzdCh2vLQQ8niXgN96lPw\nznfmX48kKTOGDtWGX/wCli4tbP/AB+CDH8y/HklS5gwdqq7f/hauuKKw/W1vK74FvSSpLhk6VB3b\nt8PMmYXtBx4Iy5YN+dc7O6GjA7q6oKUlWeW8ra0CdUqSMmPoUL527YJp09L7Vq6EZGXbQXV2woIF\nMGYMTJiQLEy6YAEsWmTwkKRaZuhQfqZMSW9fvhxGjiz5MB0dSeAYOzb5vPtnR4ehQ5JqmaFDlXfN\nNfD004Xty5Ylr1OGqasrecLR1+jRSbskqXYZOhpETY5x+OY34fvfL2y/8ko44og9PmxLS/JKZfcT\nDoCenqRdklS73KyiAewe47B1a/8xDp2dVSrovvuSVykDA8fFFycbspUROCAJVN3dsG1bMkRk27bk\nc3t7WYeVJFWYTzoaQM2Mcfjxj5O9UAb66Efh9NMzO01bWzJotO+TnVmzauDJjiRpUIaOBlD1MQ7P\nPQcLFxa2n3oqXHhhRU7Z1mbIkKR6Y+hoAFUb4/DSS8kjhoGOPBLmz6/wySVJ9cbQ0QDa25MxHJA8\n4ejpScY4pOWBTOzcWXy10FWrKnRSSVK9M3Q0gNzGOMQIU6em961YASMclyxJKs7Q0SAqPsZh7lx4\n4YXC9i99Cfbbr4InliQ1CkOHBrdqFTz8cGH74sUwfnz+9UiS6pahQ+nWroU1awrbP/c5ePOb869H\nklT3DB3qb8MGWL26sP0Tn4CTT86/HklSwzB0KPH008keKQOddRZ86EO5lyNJajyGjmb3wgvJINGB\njj8eZs7Mvx5JUsMydDSrHTtgxozC9n33TV/KXJKkMhk6ms1ga22sXAkh5FuPJKlpGDqaybRpybas\nAy1fDiNH5l+PJKmplBU6QghXA+cCu4AtwMdjjL/KojBlaNkyeOqpwvbrrkvWTZckKQflPum4LsY4\nHyCEMANYABR5dq/c3X473HtvYfv8+cmmbJIk5ais0BFj7Onz8QAglleOMvGf/wlf/3ph+/TpcOKJ\n+dcjSRIZjOkIISwGLgS6gf89yPcmA5MBJk6cWO5pleanP4Xrry9sP/98OPPM/OuRJKmPEOPgDydC\nCOuAw1K65sUY1/T53uXAvjHGK4c6aWtra1y/fv1wa1UxL74Is2cXtp98crKSqCRJFRRC2BBjbB3q\ne0M+6YgxnlHiOb8BrAWGDB3KyKuvwtKl8Mwz/dsPPTTZ616SpBpS7uyVSTHG3dMizgWeKL8kDWnX\nrmR/lB/+sLDPtTYkSTWq3DEd14YQ3kIyZXYTzlyprBjhn/8Z1q3r3/6Od8CnPgUjRlSnLkmSSlDu\n7JXzsypEQ/j3f4d/+qf+bUcfnYzlcGEvSVIdcEXSWvfww7BqVf+2Aw+Eq66CAw6oTk2SJO0BQ0et\n+tnPkhVDB1qyBMaNy78eSZLKZOioNb/+NVyZMgHo85+Ho47Kvx5JkjJi6KgV3d0wd27hhmwzZ8Lx\nx1enJkmSMmToqLbt2+Fv/xZ+85v+7e3tcMop1alJkqQKMHRUy2uvwY03whMDljb54AfhAx+oTk2S\nJFWQoSNvMSabsf3gB/3bTz0V/vqvXdhLktSwDB15WrsW1qzp33bccXDxxbC3t0KS1Nj8ly4PDzwA\nf//3/dsOPjiZkbLvvtWpSZKknBk6KuknP4Evfal/24gRcO21MGZMZqfp7ISODujqgpaWZAxqW1tm\nh5ckKROGjkp45plkRspACxfC4YdneqrOTliwIMkwEybA1q3J50WLDB6SpNpi6MjSb38LV1xR2D57\nNkyaVJFTdnQkgWPs2OTz7p8dHYYOSVJtMXRk4fe/T1YRffHF/u1TpsBJJ1X01F1dyROOvkaPTtol\nSaolho5yvPoqLFsGTz/dv/2jH4XTT8+lhJaW5JXK7iccAD09SbskSbXE0LEnYoSvfhXWr+/ffsYZ\n8OEP57rWRnt7MoYDkiccPT3JiuqzZuVWgiRJJTF0DNe3vgX33NO/7e1vh8mTk5kpOWtrSwaN9p29\nMmuW4zkkSbXH0FGq++6D227r33bUUXDZZTBqVFVK2q2tzZAhSap9ho6hPPIIrFjRv23//eHqq+EN\nb6hOTZIk1SFDRzG/+AUsXVrYvngxjB+ffz2SJNU5Q8dAzz//+sjMvq64At70pvzrkSSpQRg6duvp\ngcsvh507+7dffDGccEJ1apIkqYEYOnbsSF6ZPP98//YLL0y2m5ckSZlo3tCxaxcsXw4bN/ZvP/ts\nOOec6tQkSVIDa77QEWMy9fX73+/f/id/kqy0lePCXpIkNZPmCh333JMs7tXXscfCzJmwd3P9TyFJ\nUt6a41/aBx+EW2/t3zZuHMyfD/vtV52aJElqMo0dOp54Am64obB96dL+O6RJkqSKa8zQ8eyzyYqh\nA115JRxxRP71SJKkbEJHCGEWsAw4OMa4NYtj7pEXXoC5cwvbZ81Kxm5IkqSqKTt0hBCOAs4Efll+\nOWX4/e8LA8enPw2trdWpR5Ik9ZPFk44bgMuANRkca8+FAKNHJyuLfvjD8N73VrUcSZLUX1mhI4Rw\nLrA5xvhoGGJ9ixDCZGAywMSJE8s5barOx/en4+Xr6HoGWv4F2se43bskSbVkxFBfCCGsCyE8nvLn\nXOAKIGV3tEIxxtUxxtYYY+vBBx9cbt39dHYme7Rt3QoTJiQ/FyxI2iVJUm0Y8klHjPGMtPYQwv8E\nWoDdTzmOBB4OIbTFGH+daZVD6OiAMWNenwW7+2dHh087JEmqFXv8eiXG+CPgkN2fQwhPA63VmL3S\n1ZU84ehr9OikXZIk1YYhX6/Ug5aWZPxoXz09SbskSaoNmYWOGOPR1Vqjo70durth27Zk89ht25LP\n7e3VqEaSJKVpiCcdbW2waBGMHw+bNyc/Fy1yPIckSbWkYZZBb2szZEiSVMsa4kmHJEmqfYYOSZKU\nC0OHJEnKhaFDkiTlwtAhSZJyYeiQJEm5MHRIkqRcGDokSVIuQowx/5OG8BtgU+4nft14oCpLttcI\nr9/r9/qbl9fv9Vfi+t8UYzx4qC9VJXRUWwhhfYyxtdp1VIvX7/V7/V5/teuoFq+/utfv6xVJkpQL\nQ4ckScpFs4aO1dUuoMq8/ubm9Tc3r7+5VfX6m3JMhyRJyl+zPumQJEk5M3RIkqRcNEXoCCFcF0J4\nIoTwWAjhrhDC2CLfOyuE8NMQws9CCHPzrrNSQggfCSFsDCHsCiEUnSoVQng6hPCjEMIjIYT1edZY\nScO4/ka9/weFEL4XQniq9+cbi3yvoe7/UPczJG7s7X8shHBSNeqslBKu/90hhO7e+/1ICGFBNeqs\nhBDCrSGELSGEx4v0N/q9H+r6q3fvY4wN/wc4E9i79/elwNKU7+wF/Bw4BhgFPAocX+3aM7r+twJv\nAe4DWgf53tPA+GrXW43rb/D7/wVgbu/vc9P++2+0+1/K/QTeD/wbEICTgQerXXfO1/9u4F+rXWuF\nrv9dwEkEf96vAAACvUlEQVTA40X6G/bel3j9Vbv3TfGkI8b43Rjjzt6PDwBHpnytDfhZjPEXMcZX\ngH8Ezs2rxkqKMf4kxvjTatdRLSVef8Pef5Lr6Oj9vQM4r4q15KWU+3ku8LWYeAAYG0I4PO9CK6SR\n/3seUozxP4DfDfKVRr73pVx/1TRF6Bjgb0gS7kATgGf6fH62t62ZRGBdCGFDCGFytYvJWSPf/0Nj\njM/1/v5r4NAi32uk+1/K/Wzke17qtZ3S+3rh30IIf5RPaTWhke99qapy7/fO60SVFkJYBxyW0jUv\nxrim9zvzgJ3AN/KsLQ+lXH8J/jTGuDmEcAjwvRDCE72JueZldP11a7Dr7/shxhhDCMXmydft/dce\neRiYGGN8KYTwfuBfgElVrkn5qNq9b5jQEWM8Y7D+EMLHgbOB02PvS60BNgNH9fl8ZG9bXRjq+ks8\nxuben1tCCHeRPKKti390Mrj+hr3/IYTnQwiHxxif632EvKXIMer2/qco5X7W9T0fwpDXFmPs6fP7\n2hDC34UQxscYm2EztEa+90Oq5r1vitcrIYSzgMuAD8YYXy7ytYeASSGElhDCKOAvgbvzqrHaQggH\nhBAO3P07yeDb1JHPDaqR7//dQHvv7+1AwZOfBrz/pdzPu4ELe2cynAx093kNVe+GvP4QwmEhhND7\nexvJvwe/zb3S6mjkez+kqt77ao+yzeMP8DOS93eP9P5Z2dt+BLC2z/feDzxJMup7XrXrzvD6P0Ty\nznIH8Dxwz8DrJxnl/mjvn43Ndv0Nfv/HAfcCTwHrgIOa4f6n3U9gKjC19/cA3Nzb/yMGmdlVj39K\nuP7P9N7rR0kG2J9S7ZozvPbbgOeAV3v/v//JJrv3Q11/1e69y6BLkqRcNMXrFUmSVH2GDkmSlAtD\nhyRJyoWhQ5Ik5cLQIUmScmHokCRJuTB0SJKkXPx/qH8gfe4e6bIAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2276cb14208>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Exercise 1\n",
+    "\n",
+    "import numpy as np\n",
+    "from scipy.stats import linregress\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(9, 5))\n",
+    "\n",
+    "x = np.random.randn(20)\n",
+    "y = 2 * x + 0.5 * np.random.randn(20)\n",
+    "gradient, intercept, r_value, p_value, std_err = linregress(x, y)\n",
+    "gradient, intercept\n",
+    "\n",
+    "f = lambda x: gradient * x + intercept\n",
+    "\n",
+    "ax.plot(x, y, 'bo', lw=2, alpha=0.6)\n",
+    "ax.plot(x, f(x), 'r-', lw=2, alpha=0.6)\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1366,6 +1403,33 @@
     "Suppose we know an $x_0$ which makes $f(x_0) = 385$, please get the value of $x_0$\n",
     "\n",
     "**Hint:** You may use *multivariate root finding* introduced in the lecture for solving this problem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21.0\n",
+      "-18.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 2\n",
+    "\n",
+    "from scipy.optimize import brentq\n",
+    "\n",
+    "solution = brentq(lambda x: x**2 - 3 * x + 7 - 385, 1e-5, 30)\n",
+    "\n",
+    "print(solution)\n",
+    "\n",
+    "solution2 = brentq(lambda x: x**2 - 3 * x + 7 - 385, -18, 1e-5)\n",
+    "print(solution2)"
    ]
   },
   {
@@ -1380,6 +1444,34 @@
    "metadata": {},
    "source": [
     "- **recusive function calls**: a function that calls itself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.optimize import bisect\n",
+    "\n",
+    "f = lambda x: np.sin(4 * (x - 0.25)) + x + x**20 - 1\n",
+    "bisect(f, 0, 1)\n",
+    "\n",
+    "\n",
+    "def bisection(f, a, b, tol=10e-5):\n",
+    "\n",
+    "    lower, upper = a, b\n",
+    "    if upper - lower < tol:\n",
+    "        return 0.5 * (upper + lower)\n",
+    "    else:\n",
+    "        middle = 0.5 * (upper + lower)\n",
+    "        print('Current mid point = {}'.format(middle))\n",
+    "        if f(middle) > 0:   \n",
+    "            bisection(f, lower, middle)\n",
+    "        else:               \n",
+    "            bisection(f, middle, upper)"
    ]
   }
  ],
@@ -1399,7 +1491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
