Add Simon's homework 4

--- a/Jake Zhao/Dynamic Programming.ipynb
+++ b/Jake Zhao/Dynamic Programming.ipynb
@@ -281,6 +281,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem 1\n",
+    "import numpy as np\n",
+    "from scipy.optimize import fminbound\n",
+    "\n",
+    "\n",
+    "def u(c):\n",
+    "    \n",
+    "    return np.log(c)\n",
+    "\n",
+    "\n",
+    "ϵ = np.array([1.0, 2.0])\n",
+    "P = np.array([[0.9, 0.1], [0.4, 0.6]])\n",
+    "\n",
+    "def bellman_operator(w, grid, u, ϵ, β, P):\n",
+    "    \n",
+    "    # Linear interpolation of w\n",
+    "    v_func = lambda x: np.interp(x, grid, w)\n",
+    "    \n",
+    "    # Storing space \n",
+    "    value_function = np.zeros((grid.size, ϵ.size))\n",
+    "    c_star = np.zeros((grid.size, ϵ.size))\n",
+    "    \n",
+    "    for i, w in enumerate(grid):\n",
+    "        for j in range(ϵ.size):\n",
+    "            objective = lambda c : - (ϵ[j] * u(c) + (β * ϵ * v_func(w - c) @ P[:, j]))\n",
+    "            c_star[i, j] = fminbound(objective, 1e-10, w)\n",
+    "            value_function[i, j] = objective(c_star[i, j])\n",
+    "    return value_function, c_star\n",
+    "        \n",
+    "def supremum_norm(function1, function2):\n",
+    "    return (np.abs(function1 - function2)).max()\n",
+    "        \n",
+    "def compute_fixed_point(bellman_operator, initial_w, TOL, MAXITER, grid, β, u, ϵ, P):\n",
+    "    \n",
+    "    # Iterate to find fixed point\n",
+    "    for i in range(MAXITER):\n",
+    "        Lw, c_star, = bellman_operator(initial_w, grid, u, ϵ, β, P)\n",
+    "        dist = supremum_norm(Lw, initial_w)\n",
+    "        initial_w = Lw\n",
+    "        if dist < TOL:\n",
+    "            break\n",
+    "    return initial_w"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
