--- a/Jake Zhao/Object Oriented Programming.ipynb
+++ b/Jake Zhao/Object Oriented Programming.ipynb
@@ -1854,6 +1854,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Exercise 1\n",
+    "\n",
+    "class Tax:\n",
+    "    \n",
+    "    def __init__(self, revenue, cost, tax, profit, brackets, percent):\n",
+    "        self.revenue, self.costs, self.tax, self.profit, self.brackets, self.percent = revenue, costs, tax, profit, brackets, percent\n",
+    "    \n",
+    "    def compute_profit(self):\n",
+    "        self.profit = self.revenue - self.costs\n",
+    "    \n",
+    "    def compute_tax(self):\n",
+    "        if self.profit <= self.brackets[0]:\n",
+    "            self.tax += self.percent[0] * (self.profit)\n",
+    "        elif self.profit > self.brackets[0] and self.profit <= self.brackets[1]:\n",
+    "            self.tax += self.percent[0] * self.bracket[0] + (self.profit - self.bracket[0]) * self.percent[1]\n",
+    "        elif self.profit > self.brackets[1] and self.profit <= self.brackets[2]:\n",
+    "            self.tax += self.percent[0] * self.bracket[0] + self.percent[1] * self.brackets[1] + (self.profit - self.bracket[1]) * self.percent[2]\n",
+    "        else:\n",
+    "            self.tax += self.percent[0] * self.bracket[0] + self.percent[1] * self.brackets[1] + self.percent[1] * self.brackets[1] + (self.profit - self.bracket[2]) * self.percent[3]\n",
+    "        return self.tax                                                                                                     "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1869,6 +1899,88 @@
     "1. Create data fields: **stash**, **house_earnings** (how much the casino has earned which is common across all instances of Roulette), etc...\n",
     "2. Implement methods: **roll()**, **add_money()**, **check_stash()**, **check_house_earnings()**, etc...\n",
     "3. Feel free to add as many features to the game as you would like - have fun!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 2\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "class Roulette:\n",
+    "    \n",
+    "    def __init__(self, stash, house_earnings):\n",
+    "        self.stash, self.house_earnings = stash, house_earnings\n",
+    "        \n",
+    "    def roll(self, bet, bet_type, straight_bet=None):\n",
+    "        if bet_type == 'even':\n",
+    "            z = np.random.uniform(0, 36)//1\n",
+    "            print('roll = %i' % z)\n",
+    "            if z % 2 == 0 and z != 0:\n",
+    "                self.stash += 2 * bet\n",
+    "                self.house_earnings += - bet\n",
+    "                print('Win')\n",
+    "            else:\n",
+    "                self.stash += - bet\n",
+    "                self.house_earnings += bet\n",
+    "                print('Lose')\n",
+    "        elif bet_type == 'odd':\n",
+    "            z = np.random.uniform(0, 36)//1\n",
+    "            print('roll = %i' % z)\n",
+    "            if z % 2 != 0 and z != 0:\n",
+    "                self.stash += 2 * bet\n",
+    "                self.house_earnings += - bet\n",
+    "                print('Win')\n",
+    "            else:\n",
+    "                self.stash += - bet\n",
+    "                self.house_earnings += bet\n",
+    "                print('Lose')\n",
+    "        elif bet_type == 'straight':\n",
+    "            z = np.random.uniform(0, 36)//1\n",
+    "            print('roll = %i' % z)\n",
+    "            if z == straight_bet:\n",
+    "                self.stash += 2 * bet\n",
+    "                self.house_earnings += - bet\n",
+    "                print('Win')\n",
+    "            else:\n",
+    "                self.stash += - bet\n",
+    "                self.house_earnings += bet\n",
+    "                print('Lose')\n",
+    "        elif bet_type == 'Red':\n",
+    "            elements = ['0', 'Red', 'Black']\n",
+    "            probabilities = [1/37, 18/37, 18/37]\n",
+    "            z = np.random.choice(elements, p=probabilities)\n",
+    "            print(z)\n",
+    "            if z == 'Red':\n",
+    "                self.stash += 2 * bet\n",
+    "                self.house_earnings += - bet\n",
+    "                print('Win')\n",
+    "            else:\n",
+    "                self.stash += - bet\n",
+    "                self.house_earnings += bet\n",
+    "                print('Lose')\n",
+    "        elif bet_type == 'Black':\n",
+    "            elements = ['0', 'Red', 'Black']\n",
+    "            probabilities = [1/37, 18/37, 18/37]\n",
+    "            z = np.random.choice(elements, p=probabilities)\n",
+    "            print(z)\n",
+    "            if z == 'Black':\n",
+    "                self.stash += 2 * bet\n",
+    "                self.house_earnings += - bet\n",
+    "                print('Win')\n",
+    "            else:\n",
+    "                self.stash += - bet\n",
+    "                self.house_earnings += bet\n",
+    "                print('Lose')\n",
+    "            \n",
+    "            \n",
+    "    def add_money(self, money):\n",
+    "        self.stash += money "
    ]
   },
   {
@@ -1899,6 +2011,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Exercise 4\n",
+    "\n",
+    "class ECDF:\n",
+    "    \n",
+    "    def __init__(self, observations):\n",
+    "        self.observations = observations\n",
+    "        \n",
+    "    def __call__(self, observations, x):\n",
+    "        return (1 / len(self.observations)) * np.sum(np.ones(self.observations[self.observations <= x].size))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1922,12 +2053,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise 4\n",
+    "\n",
+    "class Polynomial:\n",
+    "    \n",
+    "    def __init__(self, coefficients):\n",
+    "        self.coefficients = coefficients\n",
+    "    \n",
+    "    def __call__(self, x):\n",
+    "        j = []\n",
+    "        for i in range(len(self.coefficients)):\n",
+    "            z = x**i\n",
+    "            j.append(z)\n",
+    "        return self.coefficients@j\n",
+    "    \n",
+    "    def diff(self, x):\n",
+    "        j = []\n",
+    "        for i in range(len(self.coefficients) - 1):\n",
+    "            z = x**i\n",
+    "            j.append(z)\n",
+    "        return self.coefficients[1:]@j        "
+   ]
   }
  ],
  "metadata": {
