--- a/John/markov_asset_tauchen.ipynb
+++ b/John/markov_asset_tauchen.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,12 +26,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll take the state process to be a discretized AR(1) process, with the discretization based on Tauchen's method."
+    "We'll take the state process to be a discretized AR(1) process\n",
+    "\n",
+    "$$ X_{t+1} = \\rho X_t + \\sigma \\xi_{t+1} $$\n",
+    "\n",
+    "with the discretization based on Tauchen's method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
