--- a/John/asset_pricing_simulation.ipynb
+++ b/John/asset_pricing_simulation.ipynb
@@ -44,13 +44,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "We consider the case of nonstationary dividends and consumption, where\n",
     "\n",
     "$$ \\ln \\frac{D_{t+1}}{D_t} = \\mu_d + X_t + \\sigma_d \\eta_{d, t+1} $$\n",
@@ -115,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -183,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -194,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -228,6 +221,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The method is slow for this small state space but produces the right figure.\n",
+    "\n",
+    "With larger state spaces it becomes the best method."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -235,59 +237,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Model 2\n",
-    "\n",
-    "Following Song, Schorfheide and Yaron (2018, ECMA), let\n",
-    "\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\ln \\frac{C_{t+1}}{ C_t} &\n",
-    "    = \\mu_c + z_t + \\sigma_{c, t} \\, \\eta_{c, t+1},\n",
-    "    \\\\\n",
-    "    \\ln \\frac{D_{t+1}}{ D_t} &\n",
-    "    = \\mu_d + \\alpha z_t + \\delta \\sigma_{c, t} \n",
-    "        \\, \\eta_{c, t+1} + \\sigma_{d, t} \\, \\eta_{d, t+1}\n",
-    "\\end{align*}\n",
-    "\n",
-    "where\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    z_{t+1} & = \\rho \\, z_t + (1 - \\rho^2)^{1/2} \\, \n",
-    "        \\sigma_{z, t} \\, \\upsilon_{t+1},\n",
-    "    \\\\\n",
-    "    \\sigma_{i, t} & = \\varphi_i \\, \\bar{\\sigma} \\exp(h_{i, t}),\n",
-    "    \\\\\n",
-    "    h_{i, t+1} & = \\rho_{h_i} h_i + \\sigma_{h_i} \\xi_{i, t+1},\n",
-    "    \\quad i \\in \\{z, c, d\\}\n",
-    "\\end{align*}\n",
-    "\n",
-    "\n",
-    "As before,\n",
-    "\n",
-    "$$\n",
-    "    A_{t+1} \n",
-    "    = M_{t+1} \\frac{D_{t+1}}{D_t} \n",
-    "    = \\beta \\left( \\frac{C_{t+1}}{C_t} \\right)^{-\\gamma} \n",
-    "        \\frac{D_{t+1}}{D_t}\n",
-    "$$\n",
-    "\n",
-    "This becomes\n",
-    "\n",
-    "$$\n",
-    "    A_{t+1} \n",
-    "    =  \\beta \\exp(\n",
-    "        -\\gamma  \\mu_c + \\mu_d\n",
-    "        + (\\alpha - \\gamma) z_t \n",
-    "        - \\gamma  \\sigma_{c, t} \\eta_{c, t+1} \n",
-    "        + \\sigma_{d, t} \\eta_{d, t+1}\n",
-    "        )\n",
-    "$$"
-   ]
   }
  ],
  "metadata": {
