--- a/John/inventory_dynamics.ipynb
+++ b/John/inventory_dynamics.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "def sim_inventory_paths(initial_x=50, sim_length=100):\n",
     "    X = np.empty(sim_length)\n",
-    "    X[0] = 50\n",
+    "    X[0] = initial_x\n",
     "\n",
     "    for t in range(sim_length-1):\n",
     "        D = ϕ()\n",
@@ -619,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
